#736: Added Entity Workflow Attribute mutations